Bugfix - content scrolls on mobile devices while modal active

--- a/style/css/modal.css
+++ b/style/css/modal.css
@@ -10,7 +10,11 @@ button::-moz-focus-inner {
 
 .modal-active {
     overflow: hidden;
-    height: auto;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 .modal-wrapper {
